[gd_scene load_steps=3 format=2]

[ext_resource path="res://Player/magnet.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Magnet" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="area_entered" from="." to="." method="_on_Magnet_area_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_MovementTimer_timeout"]
